[package]
name = "ray_tracing_in_one_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "0.21", features = ["fast-math"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
